Refactores message system and shared chat sync
